# deadend-cli

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  README.md  install.sh  pyproject.toml
deadend/: main.py  pyproject.toml
deadend/deadend_cli/: pyproject.toml
deadend/deadend_cli/src/deadend_cli/: banner.py  chat.py  cli.py  eval.py
deadend/deadend_prompts/: pyproject.toml
deadend/deadend_prompts/src/deadend_prompts/: template_renderer.py  webapp_recon.instructions.jinja2
deadend/deadend_prompts/tools/: send_payload.description.jinja2
deadend/deadend_sdk/: pyproject.toml
deadend/deadend_sdk/src/deadend_sdk/: __init__.py  core.py
deadend/deadend_sdk/src/deadend_sdk/agents/: exploit_web_agent.py  factory.py  recon_shell_agent.py  reporter.py  webapp_recon_agent.py
deadend/deadend_sdk/src/deadend_sdk/context/: context_engine.py
deadend/deadend_sdk/src/deadend_sdk/embedders/: knowledge_base_indexer.py
deadend/deadend_sdk/src/deadend_sdk/models/: registry.py
deadend/deadend_sdk/src/deadend_sdk/rag/: database.py
deadend/deadend_sdk/src/deadend_sdk/tools/: __init__.py  crawler.py  playwright_requester.py  requester.py  shell.py  web_resource_extractor.py  webapp_code_rag.py  zap_connector.py
deadend/deadend_sdk/tests/: conftest.py
deadend/deadend_sdk/tests/deadend_sdk/tools/: __init__.py
deadend/eval/: ctf_evaluator.py  pyproject.toml
deadend_cli/: .env.example  .python-version  CONTEXT_IMPROVEMENTS.md  MEMORY_ENHANCEMENTS.md  README.md  pyproject.toml
deadend_cli/benchmarks/: XBEN-001-24_IDOR_-_Trading_Platform_-_Authorization_2025-12-19_11-43-01.txt  XBEN-001-24_IDOR_-_Trading_Platform_-_Authorization_2025-12-19_11-54-13.txt  XBEN-002-24.txt  XBEN-002-24_IDOR_-_Trading_Platform_-_Indirect_2025-12-16_14-02-52.txt  XBEN-003-24_IDOR_-_Trading_Platform_-_Custom_Header_2025-12-19_22-07-17.txt  XBEN-003-24_IDOR_-_Trading_Platform_-_Custom_Header_2025-12-19_22-13-40.txt  XBEN-004-24_Cross_25_2025-12-19_22-29-32.txt  XBEN-005-24_Simple_IDOR_POST_2025-12-15_10-54-28.txt  XBEN-005-24_Simple_IDOR_POST_2025-12-15_11-02-55.txt  XBEN-006-24_Simple_SQLi_with_allowlist_2025-12-16_14-33-49.txt  XBEN-008-24_Cross_21_2025-12-19_23-26-34.txt  XBEN-009-24_SSTI_DJango_2025-12-20_09-48-33.txt  XBEN-009-24_SSTI_DJango_2025-12-20_09-57-32.txt  XBEN-009-24_SSTI_DJango_2025-12-20_10-04-34.txt  XBEN-010-24_Cross_32_2025-12-20_10-18-43.txt  XBEN-010-24_Cross_32_2025-12-20_10-28-34.txt  XBEN-010-24_Cross_32_2025-12-20_10-42-38.txt  XBEN-010-24_Cross_32_2025-12-20_16-37-48.txt  XBEN-011-24_Cross_24_2025-12-20_19-54-53.txt  XBEN-011-24_Cross_24_2025-12-20_20-04-15.txt  XBEN-011-24_Cross_24_2025-12-20_20-25-20.txt  XBEN-012-24_Cross_11_2025-12-20_18-29-37.txt  XBEN-012-24_Cross_11_2025-12-20_19-28-45.txt  XBEN-012-24_Cross_11_2025-12-20_19-49-06.txt  XBEN-013-24_Cross_5_2025-12-21_12-06-56.txt  XBEN-014-24_Auth_4_2025-12-21_12-13-40.txt  XBEN-014-24_Auth_4_2025-12-21_13-14-02.txt  XBEN-016-24_Cross_13_2025-12-21_15-51-49.txt  XBEN-017-24_Cross_10_2025-12-21_16-05-09.txt  XBEN-019-24_Static_Resource_2025-12-21_18-17-12.txt  XBEN-020-24_PHP_SSRF_2025-12-21_18-34-00.txt  XBEN-020-24_PHP_SSRF_2025-12-21_18-38-00.txt  XBEN-021-24_Simple_IDOR_Cookie_2025-12-21_20-32-24.txt  XBEN-024-24_Profile_Picture_2025-12-22_13-13-16.txt  XBEN-024-24_Profile_Picture_2025-12-22_13-56-47.txt  XBEN-026-24_Deprecated_Developers_2025-12-22_14-28-15.txt  XBEN-027-24_Trading_Platform_2025-12-22_18-37-18.txt  XBEN-027-24_Trading_Platform_2025-12-22_18-44-10.txt  XBEN-028-24_Poison_Inclusion_v2_2025-12-22_19-09-16.txt  XBEN-029-24_Bobby_Payroll_2025-12-22_22-10-12.txt  (+97 more)
deadend_cli/cli/: pyproject.toml
deadend_cli/cli/src/deadend_cli/: banner.py  cli.py  eval.py  workflow_runner.py
deadend_cli/core/tools/: playwright_requester.py  python_interpreter.py
deadend_cli/deadend_agent/: pyproject.toml
deadend_cli/deadend_agent/src/deadend_agent/: __init__.py  constants.py  core.py  deadend_agent.py  hooks.py  logging.py
deadend_cli/deadend_agent/src/deadend_agent/agents/: __init__.py  architecture.py  exploit_web_agent.py  factory.py  judge.py  planner.py  reporter.py  (+7 more)
deadend_cli/deadend_agent/tests/: __init__.py  conftest.py  test_provider_env.py
deadend_cli/deadend_agent/tests/rlm/: test_avfs.py  test_deadend_agent_avfs_startup.py  test_memory.py  test_memory_avfs.py  test_runner.py
deadend_cli/deadend_eval/: eval.py  pyproject.toml
deadend_cli/deadend_eval/src/deadend_eval/: __init__.py  eval.py  metrics.py
deadend_cli/deadend_prompts/: pyproject.toml
deadend_cli/deadend_prompts/src/deadend_prompts/: __init__.py  authenticator.instructions.jinja2  exploit_web.instructions.jinja2  judge.instructions.jinja2  memory.instructions.jinja2  planner.instructions.jinja2  python_interpreter.instructions.jinja2  recon_threatmodel.instructions.jinja2  reporter.instructions.jinja2  requester.instructions.jinja2  router.instructions.jinja2  shell.instructions.jinja2  supervisor.instructions.jinja2  template_renderer.py  webapp_analyzer.instructions.jinja2  webapp_recon.instructions.jinja2
deadend_cli/deadend_sdk/: README.md  pyproject.toml  pytest.ini
deadend_cli/deadend_sdk/src/deadend_sdk/: core.py
deadend_cli/deadend_sdk/tests/: __init__.py
deadend_cli/docs/: README.md  openapi.json  openapi.yaml
deadend_cli/eval/: eval.py  pyproject.toml
deadend_cli/installer/: deadend.sh  fix_permissions.sh  install_playwright_browsers.sh  pyoxidizer.bzl
deadend_cli/src/deadend_cli/: __init__.py  banner.py  chat.py  cli.py  cli_logging.py  component_manager.py  embedding_sync.py  eval.py  event_bus.py  hooks_adapter.py  http_server.py  init.py  jsonrpc_server.py  logging.py  main.py  rpc_models.py  rpc_server.py  workflow_runner.py
deadend_cli/src/deadend_cli/http/: __init__.py  app.py  deps.py  openapi_spec.py  schemas.py
deadend_cli/src/deadend_cli/jsonrpc/: event_bus.py  hooks_adapter.py  rpc_models.py  rpc_server.py
deadend_cli/tests/: conftest.py  test_rpc_server.py
deadend_cli/tests/fixtures/: sandbox_fixtures.py
deadend_cli/tests/integration/: test_rpc_server.py
(+353 files in other folders)
