[project]
name = "deadend-prompts"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yassine Bargach", email = "bargach.y@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
]

[tool.hatch.build.targets.wheel]
include = [
    "./*.jinja2",
    "./tools/*.jinja2",
]


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
