[project]
name = "deadend-sdk"
dynamic = ["version"]
requires-python = ">=3.11"
readme = "README.md"
description = "Core SDK for security tooling"
authors = [{name="Yassine Bargach", email="yassine.bargach@proton.me"}]

dependencies = [
    "deadend_prompts",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "asgiref>=3.8.1",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.4",
    "cssbeautifier>=1.15.4",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "google-genai>=1.18.0",
    "httptools>=0.6.4",
    "jsbeautifier>=1.15.4",
    "logfire>=4.3.3",
    "logging>=0.4.9.6",
    "lxml>=6.0.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.1",
    "pgvector>=0.4.1",
    "playwright>=1.54.0",
    "prompt-toolkit>=3.0.51",
    "pydantic>=2.11.5",
    "pydantic-ai>=0.2.12",
    "pydantic-ai-slim[google]>=0.2.12",
    "pyyaml>=6.0.2",
    "readchar>=4.2.1",
    "rich>=14.0.0",
    "semantic-text-splitter>=0.27.0",
    "sqlalchemy>=2.0.41",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "toml>=0.10.2",
    "tree-sitter-css>=0.23.2",
    "tree-sitter-html>=0.23.2",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-markdown>=0.5.1",
    "tree-sitter-typescript>=0.23.2",
    "typer>=0.15.4",
    "zaproxy>=0.4.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/deadend_sdk"]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "aioresponses>=0.7.6",
]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=1.0.0",
]
